# olas-energy-management-agents

./: .gitignore  LSTM - Energy Consumption.ipynb  Makefile  README.md  TRANSFORMER - Energy Consumption.ipynb  create_mock_data.py  fsm_specification.yaml  main.py  pyproject.toml  requirements.txt  run_agent.sh  server.py  tox.ini
.ipynb_checkpoints/: Energy Consumption and Production Analysis-checkpoint.ipynb  LSTM - Energy Consumption-checkpoint.ipynb
PoC/: .gitignore  README.md
PoC/contracts/: ProducerSubscriber.sol
PoC/models/: scaler.pkl
PoC/notebooks/: TRANSFORMER - Energy Consumption - PyTorch.ipynb
PoC/scripts/: create_mock_data.py  model.py  server.py
PoC/utils/: model_utils.py  transformers.py
models/: pca.pkl  scaler.pkl
notebooks/: Energy Consumption and Production Analysis.ipynb  TRANSFORMER - Energy Consumption.ipynb
scripts/: __init__.py  aea-config-replace.py  bump.py  check_dependencies.py  check_doc_ipfs_hashes.py
utils/: model_utils.py  transformers.py
