[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "olas-energy-management-agents"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
repository = "https://github.com/keyko-io/olas-energy-management-agents.git"
keywords = [ "autonomy", "autonomous", "autonolas", "service", "multi", "agent",]
classifiers = [ "Environment :: Console", "Environment :: Web Environment", "Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Natural Language :: English", "Operating System :: MacOS", "Operating System :: Microsoft", "Operating System :: Unix", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Communications", "Topic :: Internet", "Topic :: Scientific/Engineering", "Topic :: Software Development", "Topic :: System",]
[[tool.poetry.packages]]
include = "packages"

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
open-autonomy = "==0.14.6"
typing_extensions = ">=3.10.0.2"
toml = "==0.10.2"
tomte = {version = "==0.2.15", extras = ["cli", "tests"]}
open-aea-ledger-ethereum = "^1.48.0"
grpcio = "^1.65.4"
py-ecc = "^7.0.1"
pytz = "^2024.1"
asn1crypto = "^1.5.1"
